--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,56 @@
 @import url("https://fonts.googleapis.com/css?family=Lobster%7CPlayfair+Display%7CRaleway&display=swap");
+
+/* NAVBAR */
+nav.navbar {
+  position: absolute;
+  top: 100;
+  right: 0;
+  left: 0;
+  z-index: 20;
+}
+.navbar-brand > img {
+  margin-top: -7px;
+}
+
+/*  CAROUSEL  */
+.carousel-inner .item {
+  width: 100%;
+  height: 600px;
+  background-size: cover;
+  background-position: center center;
+}
+.carousel {
+  margin-bottom: 60px;
+}
+.carousel-caption {
+  z-index: 10px;
+  padding-bottom: 60px;
+}
+
+.main_img1 {
+  background-image: url("../img/wood-2.jpg");
+}
+.main_img2 {
+  background-image: url("../img/restaurant-2.jpg");
+}
+.main_img3 {
+  background-image: url("../img/farm-2.jpg");
+}
+
+.btn-primary {
+  color: #fff;
+  background-color: #f8512f;
+}
+
+.btn-primary:hover {
+  background-color: #d34326;
+}
+
+.btn-primary,
+.btn-primary:hover {
+  border-color: transparent;
+}
+
+.text_shadow {
+  text-shadow: 1px 1px 5px #0a0a0a;
+}
