--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,28 @@
 @import url("https://fonts.googleapis.com/css?family=Lobster%7CPlayfair+Display%7CRaleway&display=swap");
 
 /* NAVBAR */
+.nav li a:hover,
+.navbar-default {
+  background-color: transparent;
+  border: transparent;
+}
+.navbar-default .navbar-nav > .active > a,
+.navbar-default .navbar-nav > .active > a:hover,
+.navbar-default .navbar-nav > .active > a:focus {
+  color: #fff;
+  background-color: rgba(17, 17, 17, 0.5);
+}
+.navbar-default .navbar-nav > li > a {
+  color: #fcfcfc;
+  text-shadow: 1px 1px 2px #0a0a0a;
+}
+
+.navbar-default .navbar-nav li a:hover,
+.navbar-default .navbar-nav li a:focus {
+  color: #f8512f;
+  background-color: rgba(17, 17, 17, 0.2);
+}
+
 nav.navbar {
   position: absolute;
   top: 100;
@@ -13,6 +35,13 @@ nav.navbar {
 }
 
 /*  CAROUSEL  */
+.main_logo {
+  max-height: 300px;
+}
+.carousel-caption p {
+  color: #f7f7f7;
+  font-size: 16px;
+}
 .carousel-inner .item {
   width: 100%;
   height: 600px;
